# dataschema-sentinel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: 01_basic_decorator.py  02_inline_wrap.py  03_explicit_compare.py  04_custom_rules.py
sentinel/: __init__.py  cli.py  config.py  core.py
sentinel/alerts/: __init__.py  base.py  json_alert.py  slack.py  terminal.py
sentinel/detector/: __init__.py  drift.py  rules.py
sentinel/diff/: __init__.py  engine.py
sentinel/profiler/: __init__.py  base.py  pandas_profiler.py  polars_profiler.py  sql_profiler.py
sentinel/store/: __init__.py  models.py  schema_store.py
tests/: conftest.py  test_alerts.py  test_detector.py  test_diff.py  test_profiler.py  test_store.py
