[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataschema-sentinel"
version = "0.1.0"
description = "Zero-config schema drift detection for data pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Dataschema Sentinel Contributors"}
]
keywords = ["data-engineering", "schema-drift", "data-quality", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.3.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
polars = ["polars>=0.19.0"]
sql = ["sqlalchemy>=2.0.0"]
slack = ["slack-sdk>=3.21.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "polars>=0.19.0",
    "sqlalchemy>=2.0.0",
    "slack-sdk>=3.21.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tanuj437/dataschema-sentinel"
Documentation = "https://github.com/tanuj437/dataschema-sentinel#readme"
Repository = "https://github.com/tanuj437/dataschema-sentinel.git"
Issues = "https://github.com/tanuj437/dataschema-sentinel/issues"

[tool.setuptools]
packages = ["sentinel", "sentinel.profiler", "sentinel.store", "sentinel.detector", "sentinel.diff", "sentinel.alerts"]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
